	  verified on a few.

5.13 2010-11-09 Gregory Nutt <spudmonkey@racsa.co.cr>

	* lib/lib_strnlen.c -- Added POSIX 2008 strnlen() function.  Contributed
	  by Michael Hrabanek.
	* Fix wild, consistent naming error.  For some reason, I called the at32uc3*
	  parts at91uc* everywhere.  Fixed by changing lots of files and directories.
	* configs/avr32dev1/ostest - The AVR32 port now successfully passes the
	  examples/ostest.  We have a good AVR32 port!
	* configs/avr32dev1/nsh - Added a configuration to support the NuttShell
	  (NSH). As of this writing, here is a problem receiving serial data (this
	  is, very likely, my hardware setup).
	* lib/lib_open.c - Fix an error in fdopen when a valid file desciptor does
	  not refer to an open file.
	* configs/olimex-lpc1766stk - Add support for the Olimex LPC1766-STK
	  development board.  The OS test and NSH configurations (only) have been
	  verified.

5.14 2010-xx-xx Gregory Nutt <spudmonkey@racsa.co.cr>

	* configs/olimex-lpc1766stk/nettest - Add examples/nettest configuration to
	  verify the LPC17xx ethernet driver currently under development.
	* arch/arm/src/lpc17xx/lpc17xx_ethernet.c/.h - Began development of
	  the LPC17xx Ethernet driver.  Driver in CVS functional after 2010-11-23.
	* sched/timer_settime.c - Fix an error in set-up of one-shot timer.  It was
	  using the repititive timer value (which is zero in the one-shot case,
	  always resulting in a 10Ms timer!  Found and fixed by Wilton Tong.
	* arch/arm/src/lpc17xx/lpc17_vector.S, stm32/stm32_vector.S, lm3s/lm3s_vector.S,
	  sam3u/sam3u_vector.S -- Fixed a hard fault problem that can occur if certain
	  types of interrupts are pending at the time another interrupt returns
	  (SYSTICK).  This has not been verified on all plaform, but is a critical
	  fixed that is needed by all Cortex-M3 NuttX users.
	* configs/olimex-lpc1766stk/thttpd - Add a THTTPD configuration for the
	  Olimex LPC2766-STK board.


