@@ -1347,6 +1347,12 @@
 	  fixed that is needed by all Cortex-M3 NuttX users.
 	* configs/olimex-lpc1766stk/thttpd - Add a THTTPD configuration for the
 	  Olimex LPC2766-STK board.
+	* net/uip/uip_tcpappsend.c - Correct an important logic bug in some uIP state
+	  data the is used to manage retransmissions.  The uIP logic was incompatible
+	  with the retransmission logic of net/send.c in one place.  The final error
+	  was that the final packet in a sequence of packets was too large!  In the
+	  THTTPD example, this would leave some garbage at the bottom of the display
+	  (or worse).  I don't know why I haven't see this bug before???
 
 
 
